Implement game visuals preview

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -1,12 +1,15 @@
 #landing > header > h1 {
     text-align: center;
-    font-size: 2.5em;
+    margin: 0px;
+}
+
+#landing > header > h1 > img {
+    width: 126px;
 }
 
 #landing > section > p:first-child {
     font-size: 1.4em;
     text-align: center;
-    margin-top: 50px;
 }
 
 #landing > section > p:last-child {
@@ -14,47 +17,149 @@
     color: #E1BB81;
     text-align: center;
     margin-top: 20px;
-    margin-bottom: 100px;
+    margin-bottom: 20px;
 }
 
-#landing > footer {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+#game-preview {
+    position: relative;
+    width: 100%;
+    height: 500px;
 }
 
-#landing > footer > a {
-    width: 250px;
-    height: 200px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    color: #EFEFEF;
-    text-decoration: none;
-    font-size: 1.2em;
-    padding: 20px;
-    background-color: #003C71;
-    border-radius: 20px;
-    transition: background-color 0.4s ease-out, color 0.4s ease-out;
+#game-preview .arrow {
+    position: absolute;
+    top: calc(50% - 21px);
+    padding: 10px;
+    cursor: pointer;
+    z-index: 5;
 }
 
-#landing > footer > a:hover {
-    box-shadow: 0px 0px 15px rgba(255,255,255,0.8);
+#game-preview .preview {
+    position: absolute;
+    border: white solid 3px;
+    border-radius: 5px;
+    opacity: 1;
+    transition: all 0.4s ease-out;
 }
 
-#landing > footer > a.white,
-#landing > footer > a:hover {
-    background-color: #E0E0F0;
-    color: #003C71;
+#game-preview .preview > img {
+    width: 100%;
 }
 
-#landing > footer > a > img {
-    width: 120px;
+#game-preview .arrow:first-child {
+    left: 2%;
 }
 
-#landing > footer > a > span {
-    text-align: center;
+#game-preview .preview[data-number="1"] {
+    top: 10%;
+    left: 5%;
+    width: 30%;
+    z-index: 1;
+}
+
+#game-preview .preview[data-number="2"] {
+    top: 5%;
+    left: 15%;
+    width: 40%;
+    z-index: 2;
+}
+
+#game-preview .preview[data-number="3"] {
+    left: 25%;
+    width: 50%;
+    z-index: 3;
+}
+
+#game-preview .preview[data-number="4"] {
+    top: 5%;
+    left: 45%;
+    width: 40%;
+    z-index: 2;
+}
+
+#game-preview .preview[data-number="5"] {
+    top: 10%;
+    left: 65%;
+    width: 30%;
+    z-index: 1;
+}
+
+#game-preview .arrow:last-child {
+    right: 2%;
+}
+
+@media (max-width: 500px) {
+
+    #game-preview {
+        height: 180px;
+    }
+    
+    #game-preview .preview:not([data-number="3"]) {
+        display: none;
+        opacity: 0;
+    }
+
+    #game-preview .arrow {
+        padding: 2px;
+    }
+
+    #game-preview .arrow img {
+        width: 26px;
+        height: 26px;
+    }
+
+    #game-preview .arrow:first-child {
+        left: 5px;
+    }
+
+    #game-preview .arrow:last-child {
+        right: 5px;
+    }
+
+    #game-preview .preview[data-number="3"] {
+        left: 10%;
+        width: 80%;
+    }
+}
+
+@media (max-width: 800px) {
+    #game-preview {
+        height: 220px;
+    }
+
+    #game-preview .preview[data-number="1"],
+    #game-preview .preview[data-number="5"] {
+        opacity: 0;
+    }
+
+    #game-preview .preview[data-number="2"] {
+        left: 10%;
+        width: 40%;
+    }
+
+    #game-preview .preview[data-number="3"] {
+        left: 20%;
+        width: 60%;
+    }
+
+    #game-preview .preview[data-number="4"] {
+        left: 50%;
+        width: 40%;
+    }
+}
+
+@media (max-width: 1200px) {
+    #game-preview {
+        height: 260px;
+    }
+
+    #game-preview .arrow:first-child {
+        left: 0px;
+    }
+
+    #game-preview .arrow:last-child {
+        right: 0px;
+    }
 }
 
 #container {
