--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,7 @@
 html {
     color: #B4C5CC;
     font-family: 'Electrolize', sans-serif;
-    background-color: #010F2A;
+    background-color: black;
 }
 
 body {
