--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -299,3 +299,21 @@
         height: 125px;
     }
 }
+
+@media (max-width: 1200px) {
+    #container {
+        width: 95%;
+        margin: auto;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 100px;
+    }
+
+    #container > div {
+        flex-basis: auto;
+    }
+
+    #social-networks {
+        margin-top: 20px;
+    }
+}
