Fix join game buttons

--- a/templates/front/dashboard.html.twig
+++ b/templates/front/dashboard.html.twig
@@ -33,7 +33,7 @@
                                 </em>
                             </div>
                             <div class="actions">
-                                <a href="{{ path('join_game', {'server_id': server.id }) }}" class="button success">{{ 'game.server.play' | trans }}</a>
+                                <a href="{{ path('join_game', {'serverId': server.id }) }}" class="button success">{{ 'game.server.play' | trans }}</a>
                             </div>
                         </section>
                         <footer></footer>
@@ -62,7 +62,7 @@
                                 </em>
                             </div>
                             <div class="actions">
-                                <a href="{{ path('join_game', {'server_id': server.id }) }}" class="button warning">{{ 'game.server.join' | trans }}</a>
+                                <a href="{{ path('join_game', {'serverId': server.id }) }}" class="button warning">{{ 'game.server.join' | trans }}</a>
                             </div>
                         </section>
                         <footer></footer>
