Update Discord invite link

--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -110,7 +110,7 @@
             <footer>
                 <h4>{{ 'homepage.follow_us' | trans }}</h4>
                 <div>
-                    <a href="https://discordapp.com/invite/as7y66" class="icon"><img src="{{ asset('images/icons/social/discord.png') }}" width="32" height="32" alt="Discord" /></a>
+                    <a href="https://discordapp.com/invite/mDTms5c" class="icon"><img src="{{ asset('images/icons/social/discord.png') }}" width="32" height="32" alt="Discord" /></a>
                     <a href="https://www.facebook.com/kalaxiagame/" class="icon"> <img src="{{ asset('images/icons/social/facebook.png') }}" width="32" height="32" alt="Facebook" /> </a>
                     <a href="https://instagram.com/kalaxiagame/" class="icon"> <img src="{{ asset('images/icons/social/instagram.png') }}" id="instagram-icon" width="28" height="28" /> </a>
                     <a href="https://twitter.com/kalaxiagame" class="icon"> <img src="{{ asset('images/icons/social/twitter.png') }}" width="32" height="32" /> </a>
