--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -53,7 +53,7 @@
     <div id="container">
         <div id="join">
             <section>
-                <a href="{{ (is_granted('ROLE_USER')) ? path('dashboard') : path('fos_user_registration_register') }}">
+                <a href="#">
                     <div>
                         {{ 'homepage.description.play_game' | trans | raw }}
                     </div>
