--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,3 +1,42 @@
 #servers {
     margin: 40px;
 }
+
+#game-download {
+    display: flex;
+}
+
+#game-download > img {
+    width: 200px;
+}
+
+#game-download > div {
+    border-left: 1px solid #A0A0A0;
+    margin-left: 20px;
+    padding-left: 20px;
+}
+
+#game-download > div > h4 {
+    margin-top: 0px;
+}
+
+#game-download > div > a {
+    display: block;
+    margin-bottom: 5px;
+    text-decoration: none;
+}
+
+#game-download button {
+    background-color: #fa5c5c;
+    box-shadow: inset 0 0 1px rgba(255,255,255,0.21);
+    line-height: 33px;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 0px 10px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#game-download
